--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -192,6 +192,14 @@
                         android:text="Aviso de Privacidad"
                         android:textColor="@color/colorPrimary"
                         android:textSize="18dp" />
+                    <TextView
+                        android:id="@+id/helps"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="Ayuda"
+                        android:textSize="18dp"
+                        android:textColor="#123fff"/>
 
 
 
