--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -30,10 +30,10 @@
 
     <ImageView
         android:id="@+id/imageView18"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="205dp"
         android:layout_gravity="center"
-        app:srcCompat="@drawable/ima1" />
+        app:srcCompat="@drawable/ldif" />
 
 
 </LinearLayout>
