--- a/app/src/main/res/layout/activity_recuperar.xml
+++ b/app/src/main/res/layout/activity_recuperar.xml
@@ -22,8 +22,9 @@
 
                 <ImageView
                     android:id="@+id/imageView8"
-                    android:layout_width="79dp"
-                    android:layout_height="6.5mm"
+                    android:layout_width="60dp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="2dp"
                     android:layout_gravity="center"
                     app:srcCompat="@drawable/loc" />
 
