--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -17,7 +17,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="8mm"
                     android:layout_margin="4dp"
-                    android:background="@drawable/header"
+                    android:background="#152E4D"
                     android:orientation="horizontal">
 
 
@@ -25,10 +25,10 @@
 
                         <ImageView
                             android:id="@+id/imageView4"
-                            android:layout_width="79dp"
-                            android:layout_height="6.5mm"
+                            android:layout_width="60dp"
+                            android:layout_height="match_parent"
                             android:layout_gravity="center"
-                            app:srcCompat="@drawable/loc" />
+                            app:srcCompat="@drawable/ima1" />
 
 
 
@@ -39,7 +39,7 @@
                             android:layout_height="match_parent"
                             android:gravity="center"
                             android:text="Registrar         "
-                            android:textColor="#393d42"
+                            android:textColor="#ffffff"
                             android:textSize="27dp" />
 
 
@@ -53,6 +53,8 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/header"
+                        android:layout_margin="10dp"
                         android:orientation="vertical">
 
                         <TextView
@@ -66,7 +68,7 @@
                             android:layout_height="40dp"
                             android:layout_gravity="center"
                             android:layout_margin="5dp"
-                            android:background="@drawable/conotor"
+                            android:background="@drawable/liniassss"
                             android:ems="10"
 
                             android:gravity="center"
@@ -83,7 +85,7 @@
                             android:layout_height="40dp"
                             android:layout_gravity="center"
                             android:layout_margin="5dp"
-                            android:background="@drawable/conotor"
+                            android:background="@drawable/liniassss"
                             android:ems="10"
                             android:gravity="center"
                             android:inputType="textPersonName" />
@@ -99,7 +101,7 @@
                             android:layout_height="40dp"
                             android:layout_gravity="center"
                             android:layout_margin="5dp"
-                            android:background="@drawable/conotor"
+                            android:background="@drawable/liniassss"
                             android:ems="10"
                             android:gravity="center"
                             android:inputType="phone" />
@@ -115,7 +117,7 @@
                             android:layout_height="40dp"
                             android:layout_gravity="center"
                             android:layout_margin="5dp"
-                            android:background="@drawable/conotor"
+                            android:background="@drawable/liniassss"
                             android:ems="10"
                             android:gravity="center"
                             android:inputType="textEmailAddress" />
@@ -131,7 +133,7 @@
                             android:layout_height="40dp"
                             android:layout_gravity="center"
                             android:layout_margin="5dp"
-                            android:background="@drawable/conotor"
+                            android:background="@drawable/liniassss"
                             android:ems="10"
                             android:gravity="center"
                             android:inputType="textPassword" />
@@ -147,7 +149,7 @@
                             android:layout_height="40dp"
                             android:layout_gravity="center"
                             android:layout_margin="5dp"
-                            android:background="@drawable/conotor"
+                            android:background="@drawable/liniassss"
                             android:ems="10"
                             android:gravity="center"
                             android:inputType="textPassword" />
