--- a/app/src/main/res/layout/activity_camion.xml
+++ b/app/src/main/res/layout/activity_camion.xml
@@ -17,20 +17,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="64dp"
-                    android:background="@android:color/background_light"
+                    android:background="#152E4D"
                     android:orientation="horizontal">
-
-                    <LinearLayout
-                        android:layout_width="93dp"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:id="@+id/imageView6"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            app:srcCompat="@drawable/loc" />
-                    </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -43,7 +31,7 @@
                             android:layout_height="match_parent"
                             android:gravity="center"
                             android:text="Aparta tu lugar"
-                            android:textColor="#393d42"
+                            android:textColor="#ffffff"
                             android:textSize="25dp" />
                     </LinearLayout>
 
