--- a/app/src/main/res/layout/activity_cuentas.xml
+++ b/app/src/main/res/layout/activity_cuentas.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="8mm"
         android:layout_margin="4dp"
-        android:background="@drawable/header"
+        android:background="#152E4D"
         android:orientation="horizontal">
 
 
@@ -21,7 +21,7 @@
                 android:id="@+id/atr"
                 android:layout_width="8mm"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/arriw" />
+                app:srcCompat="@drawable/izq" />
 
 
 
@@ -33,7 +33,7 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="Referencias Bancarias"
-                android:textColor="#393d42"
+                android:textColor="#ffffff"
                 android:textSize="25dp" />
 
 
