--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,16 +18,16 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="8mm"
-                    android:background="@drawable/header"
+                    android:background="#152E4D"
                     android:orientation="horizontal"
                     android:layout_margin="4dp">
 
                          <ImageView
                             android:id="@+id/imageView2"
-                            android:layout_width="79dp"
-                            android:layout_height="6.5mm"
+                            android:layout_width="85dp"
+                            android:layout_height="match_parent"
                              android:layout_gravity="center"
-                            app:srcCompat="@drawable/loc" />
+                            app:srcCompat="@drawable/ima1" />
 
 
 
@@ -43,9 +43,10 @@
                             android:id="@+id/textView11"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:text="Iniciar Sesion        "
-                            android:textColor="#393d42"
+                            android:gravity="center_vertical"
+                            android:layout_marginLeft="20dp"
+                            android:text="Iniciar Sesion"
+                            android:textColor="#ffffff"
                             android:textSize="27dp" />
 
                 </LinearLayout>
@@ -82,70 +83,42 @@
 
 
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="10dp" />
 
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:background="@drawable/liniassss"
-                            android:orientation="horizontal">
 
-                            <TextView
-                                android:id="@+id/user"
-                                android:layout_width="90dp"
-                                android:layout_height="40dp"
-                                android:gravity="center"
-                                android:text="Usuario:"
-                                android:textColor="#447e78"
-                                android:textSize="20dp" />
+
 
                             <EditText
                                 android:id="@+id/users"
-                                android:layout_width="190dp"
-                                android:layout_height="match_parent"
-                                android:background="@android:color/transparent"
-                                android:ems="10"
-                                android:gravity="center_vertical"
+                                android:layout_width="match_parent"
+                                android:layout_height="40dp"
+                                android:background="@drawable/liniassss"
+                                android:hint="Usuario :"
+                              android:layout_marginLeft="30dp"
+                                android:layout_marginRight="30dp"
+                                android:gravity="center"
                                 android:inputType="textPersonName" />
 
-                        </LinearLayout>
+
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="10dp" />
 
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:background="@drawable/liniassss"
-                            android:orientation="horizontal">
 
 
-                            <TextView
-                                android:id="@+id/textView3"
-                                android:layout_width="130dp"
-                                android:layout_height="40dp"
-
-                                android:gravity="center"
-                                android:text="Contraseña:"
-                                android:textColor="#447e78"
-
-                                android:textSize="20dp" />
 
                             <EditText
                                 android:id="@+id/contrasena"
-                                android:layout_width="150dp"
-                                android:layout_height="match_parent"
-                                android:background="@android:color/transparent"
-                                android:ems="10"
-                                android:gravity="center_vertical"
+                                android:layout_width="match_parent"
+                                android:layout_height="40dp"
+                                android:background="@drawable/liniassss"
+                                android:hint="   Contraseña :"
+                                android:layout_marginLeft="30dp"
+                                android:layout_marginRight="30dp"
+                                android:gravity="center"
                                 android:inputType="textPassword" />
 
-                        </LinearLayout>
+
 
 
 
@@ -156,20 +129,24 @@
 
                                 <Button
                                     android:id="@+id/in"
-                                    android:layout_width="210dp"
+                                    android:layout_width="match_parent"
                                     android:layout_height="34dp"
                                     android:layout_centerVertical="true"
                                     android:layout_gravity="center"
-                                    android:layout_margin="10dp"
+                                  android:layout_marginLeft="40dp"
+                                    android:layout_marginRight="40dp"
                                     android:background="@drawable/botones"
                                     android:text="Iniciar sesion"
                                     android:textColor="@android:color/background_light" />
                                 <Button
                                     android:id="@+id/re"
-                                    android:layout_width="210dp"
+                                    android:layout_width="match_parent"
                                     android:layout_height="34dp"
                                     android:layout_gravity="center"
+                                    android:layout_marginLeft="40dp"
+                                    android:layout_marginRight="40dp"
                                     android:textSize="15dp"
+
                                     android:background="@drawable/buton2"
                                     android:text="¡¡registrate!!"
                                     android:textColor="@android:color/background_light" />
