--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -13,29 +13,30 @@
             android:layout_width="match_parent"
             android:layout_height="8mm"
             android:layout_margin="4dp"
-            android:background="@drawable/header"
+            android:background="#152E4D"
             android:orientation="horizontal">
 
 
             <ImageView
                 android:id="@+id/imageView8"
-                android:layout_width="79dp"
+                android:layout_width="50dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_margin="2dp"
-                app:srcCompat="@drawable/loc" />
+                app:srcCompat="@drawable/izq" />
 
 
 
 
                 <TextView
-                    android:id="@+id/textView22"
+                    android:id="@+id/atrass"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:layout_gravity="center"
+                    android:gravity="center_vertical"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="30dp"
                     android:text="¿Olvidaste tu contraseña?"
-                    android:textColor="#393d42"
+                    android:textColor="#ffffff"
                     android:textSize="20dp" />
 
         </LinearLayout>
@@ -88,12 +89,12 @@
 
     <Button
         android:id="@+id/btn_submit"
-        android:layout_height="wrap_content"
+        android:layout_height="38dp"
         android:layout_marginTop="5dip"
         android:layout_gravity="center"
         android:background="@drawable/botones"
         android:textColor="@android:color/background_light"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_marginBottom="10dp"
         android:text="Enviar" />
 
