--- a/app/src/main/res/layout/activity_paypal.xml
+++ b/app/src/main/res/layout/activity_paypal.xml
@@ -13,32 +13,30 @@
         android:layout_width="match_parent"
         android:layout_height="8mm"
         android:layout_margin="4dp"
-        android:background="@drawable/header"
+        android:background="#152E4D"
         android:orientation="horizontal">
 
 
 
             <ImageView
                 android:id="@+id/imageView9"
-                android:layout_width="8mm"
+                android:layout_width="60dp"
                 android:layout_height="match_parent"
-                app:srcCompat="@drawable/loc" />
+                app:srcCompat="@drawable/ima1" />
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+
 
             <TextView
                 android:id="@+id/textView17"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
+                android:gravity="center_vertical"
+                android:layout_marginLeft="20dp"
                 android:text="Pagar Servicio"
-                android:textColor="#393d42"
+                android:textColor="#ffffff"
                 android:textSize="25dp" />
-        </LinearLayout>
+
     </LinearLayout>
 
     <TextView
