--- a/app/src/main/res/layout/activity_recuperar.xml
+++ b/app/src/main/res/layout/activity_recuperar.xml
@@ -15,34 +15,32 @@
             android:layout_width="match_parent"
             android:layout_height="8mm"
             android:layout_margin="4dp"
-            android:background="@drawable/header"
+            android:background="#152E4D"
             android:orientation="horizontal">
 
 
 
                 <ImageView
                     android:id="@+id/imageView8"
-                    android:layout_width="60dp"
+                    android:layout_width="63dp"
                     android:layout_height="match_parent"
                     android:layout_margin="2dp"
                     android:layout_gravity="center"
-                    app:srcCompat="@drawable/loc" />
+                    app:srcCompat="@drawable/ima1" />
 
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+
 
                 <TextView
                     android:id="@+id/textView22"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="center"
+                    android:gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
                     android:text="Recuperar Contraseña"
-                    android:textColor="#393d42"
+                    android:textColor="#ffffff"
                     android:textSize="20dp" />
-            </LinearLayout>
+
         </LinearLayout>
         <ScrollView
             android:layout_width="match_parent"
@@ -54,75 +52,74 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/stilo"
+            android:background="@drawable/header"
+            android:layout_margin="10dp"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView8"
-                android:layout_width="match_parent"
-                android:layout_height="29dp" />
+            <EditText
+                android:id="@+id/number"
+                android:layout_width="280dp"
+                android:layout_height="36dp"
+                android:layout_gravity="center"
+
+                android:layout_marginTop="20dp"
+                android:background="@drawable/conotor"
+                android:ems="10"
+                android:hint="codigo de verificacion"
+                android:gravity="center"
+                android:inputType="textEmailAddress" />
 
             <EditText
                 android:id="@+id/correo1"
                 android:layout_width="280dp"
                 android:layout_height="36dp"
                 android:layout_gravity="center"
-                android:layout_margin="5dp"
+                android:layout_marginTop="20dp"
                 android:background="@drawable/conotor"
                 android:ems="10"
                 android:gravity="center"
                 android:inputType="textEmailAddress" />
-
-            <TextView
-
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:gravity="center"
-                android:textSize="20dp" />
 
             <EditText
                 android:id="@+id/passw1"
                 android:layout_width="280dp"
                 android:layout_height="36dp"
                 android:layout_gravity="center"
-                android:layout_margin="5dp"
+                android:layout_marginTop="20dp"
                 android:background="@drawable/conotor"
                 android:ems="10"
                 android:gravity="center"
                 android:inputType="textPassword" />
-
-            <TextView
-
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:gravity="center"
-                android:textSize="20dp" />
 
             <EditText
                 android:id="@+id/passw2"
                 android:layout_width="280dp"
                 android:layout_height="36dp"
                 android:layout_gravity="center"
-                android:layout_margin="5dp"
+                android:layout_marginTop="20dp"
                 android:background="@drawable/conotor"
                 android:ems="10"
                 android:gravity="center"
                 android:inputType="textPassword" />
-
-            <TextView
-                android:id="@+id/textView12"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:gravity="center"
-                android:textSize="20dp" />
 
             <Button
                 android:id="@+id/recover"
                 android:layout_width="203dp"
                 android:layout_height="35dp"
                 android:layout_gravity="center"
+                android:layout_marginTop="20dp"
                 android:background="@drawable/botones"
                 android:text="Recuperar Contraseña"
+                android:textColor="@android:color/background_light" />
+            <Button
+                android:id="@+id/trys"
+                android:layout_width="203dp"
+                android:layout_height="35dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/buton2"
+                android:text="Intentar de nuevo"
                 android:textColor="@android:color/background_light" />
         </LinearLayout>
 
