--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -15,15 +15,15 @@
         android:layout_width="match_parent"
         android:layout_height="8mm"
         android:layout_margin="4dp"
-        android:background="@drawable/header"
+        android:background="#152E4D"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/imageView7"
-            android:layout_width="79dp"
-android:layout_gravity="center"
-            android:layout_height="6.5mm"
-            app:srcCompat="@drawable/loc" />
+            android:layout_width="60dp"
+
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/ima1" />
 
         <TextView
             android:id="@+id/texto"
@@ -31,7 +31,7 @@ android:layout_gravity="center"
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="Bienvenido       "
-            android:textColor="#393d42"
+            android:textColor="#ffffff"
             android:textSize="27dp" />
 
 
