--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -7,13 +7,39 @@
     android:background="#152E4D"
     android:orientation="vertical"
  tools:context=".inicio">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="19mm"
+
+        android:background="#152E4D"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/imageView7"
+            android:layout_width="140dp"
+
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/ima1" />
+
+        <TextView
+            android:id="@+id/texto"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            android:text="InIciando"
+            android:textColor="#ffffff"
+            android:textSize="27dp" />
+
+
+    </LinearLayout>
 
         <LinearLayout
             android:id="@+id/cont"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="70dp"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
             <ProgressBar
