--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/menuss"
+    android:background="#152E4D"
     tools:context=".MainActivity">
 
 
@@ -18,36 +18,29 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="8mm"
+                    android:layout_marginTop="5dp"
                     android:background="#152E4D"
                     android:orientation="horizontal"
-                    android:layout_margin="4dp">
-
-                         <ImageView
-                            android:id="@+id/imageView2"
-                            android:layout_width="85dp"
-                            android:layout_height="match_parent"
-                             android:layout_gravity="center"
-                            app:srcCompat="@drawable/ima1" />
+                   >
 
 
-
-
-                        <ProgressBar
+                    <ProgressBar
                             android:id="@+id/progreso"
                             style="?android:attr/progressBarStyle"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+
                             android:visibility="gone" />
 
                         <TextView
                             android:id="@+id/textView11"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:gravity="center_vertical"
-                            android:layout_marginLeft="20dp"
+                            android:gravity="center"
+
                             android:text="Iniciar Sesion"
                             android:textColor="#ffffff"
-                            android:textSize="27dp" />
+                            android:textSize="35dp" />
 
                 </LinearLayout>
                 <ScrollView
@@ -61,7 +54,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="168dp"
+                    android:layout_height="170dp"
 
                     android:orientation="vertical">
 
@@ -79,6 +72,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="20dp"
                     android:orientation="vertical">
 
 
@@ -92,10 +86,13 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="40dp"
                                 android:background="@drawable/liniassss"
-                                android:hint="Usuario :"
+                                android:hint="Usuario o Correo :"
+                                android:textColorHint="#F6F6F6"
+                                android:textColor="#ffffff"
                               android:layout_marginLeft="30dp"
                                 android:layout_marginRight="30dp"
                                 android:gravity="center"
+                                android:layout_marginTop="5dp"
                                 android:inputType="textPersonName" />
 
 
@@ -113,6 +110,8 @@
                                 android:layout_height="40dp"
                                 android:background="@drawable/liniassss"
                                 android:hint="   Contraseña :"
+                                android:textColor="#ffffff"
+                                android:textColorHint="#F6F6F6"
                                 android:layout_marginLeft="30dp"
                                 android:layout_marginRight="30dp"
                                 android:gravity="center"
@@ -133,8 +132,9 @@
                                     android:layout_height="34dp"
                                     android:layout_centerVertical="true"
                                     android:layout_gravity="center"
-                                  android:layout_marginLeft="40dp"
-                                    android:layout_marginRight="40dp"
+                                    android:layout_marginTop="10dp"
+                                  android:layout_marginLeft="30dp"
+                                    android:layout_marginRight="30dp"
                                     android:background="@drawable/botones"
                                     android:text="Iniciar sesion"
                                     android:textColor="@android:color/background_light" />
@@ -143,10 +143,10 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="34dp"
                                     android:layout_gravity="center"
-                                    android:layout_marginLeft="40dp"
-                                    android:layout_marginRight="40dp"
+                                    android:layout_marginLeft="30dp"
+                                    android:layout_marginRight="30dp"
                                     android:textSize="15dp"
-
+                                    android:layout_marginTop="10dp"
                                     android:background="@drawable/buton2"
                                     android:text="¡¡registrate!!"
                                     android:textColor="@android:color/background_light" />
