--- a/app/src/main/res/layout/activity_instrucciones.xml
+++ b/app/src/main/res/layout/activity_instrucciones.xml
@@ -278,7 +278,7 @@
                         android:layout_gravity="center"
                         android:layout_margin="10dp"
                         android:textColor="#ffffff"
-                        android:background="@drawable/buton2"
+                        android:background="@drawable/ev2"
                         android:text="Comenzar" />
                 </LinearLayout>
             </ScrollView>
