--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -135,7 +135,7 @@
                                     android:layout_marginTop="10dp"
                                   android:layout_marginLeft="30dp"
                                     android:layout_marginRight="30dp"
-                                    android:background="@drawable/botones"
+                                    android:background="@drawable/ev1"
                                     android:text="Iniciar sesion"
                                     android:textColor="@android:color/background_light" />
                                 <Button
@@ -147,7 +147,7 @@
                                     android:layout_marginRight="30dp"
                                     android:textSize="15dp"
                                     android:layout_marginTop="10dp"
-                                    android:background="@drawable/buton2"
+                                    android:background="@drawable/ev2"
                                     android:text="¡¡registrate!!"
                                     android:textColor="@android:color/background_light" />
 
