--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -92,7 +92,7 @@
         android:layout_height="38dp"
         android:layout_marginTop="5dip"
         android:layout_gravity="center"
-        android:background="@drawable/botones"
+        android:background="@drawable/ev1"
         android:textColor="@android:color/background_light"
         android:layout_width="200dp"
         android:layout_marginBottom="10dp"
