--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -157,7 +157,7 @@
                             android:layout_width="200dp"
                             android:layout_height="32dp"
                             android:layout_gravity="center"
-                            android:background="@drawable/botones"
+                            android:background="@drawable/ev1"
                             android:text="Registrar"
                             android:textColor="#ffffff" />
 
