--- a/app/src/main/res/layout/activity_suscribir.xml
+++ b/app/src/main/res/layout/activity_suscribir.xml
@@ -378,7 +378,7 @@
                 android:layout_width="50mm"
                 android:layout_height="7mm"
                 android:layout_gravity="center"
-                android:background="@drawable/botones"
+                android:background="@drawable/ev1"
                 android:layout_margin="10dp"
                 android:textColor="@android:color/background_light"
                 android:text="Guardar y crear horario" />
