--- a/app/src/main/res/menu/activity_menu_drawer.xml
+++ b/app/src/main/res/menu/activity_menu_drawer.xml
@@ -16,6 +16,7 @@
         <item
             android:id="@+id/documents"
             android:icon="@drawable/documents"
+            android:visible="false"
             android:title="Otros Servicios" />
         <item
             android:id="@+id/rutas"
@@ -28,13 +29,19 @@
         <item
             android:id="@+id/nav_share"
             android:icon="@drawable/inter"
-            android:title="Noticias" />
+            android:title="Novedades" />
 
         <item
             android:id="@+id/pago"
             android:icon="@drawable/paypal"
             android:visible="false"
             android:title="Pagar Cuota" />
+
+        <item
+            android:id="@+id/ayudar"
+            android:icon="@drawable/indo"
+
+            android:title="Ayuda" />
 
 
     </group>
