--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -26,33 +26,32 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:layout_marginLeft="10dp"
-            android:text="InIciando"
+
+            android:text="Iniciando App"
             android:textColor="#ffffff"
             android:textSize="27dp" />
 
 
     </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/cont"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+    <LinearLayout
+        android:id="@+id/cont"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
+
+        <ProgressBar
+            android:id="@+id/progressBar3"
+            style="?attr/actionBarTabBarStyle"
+            android:layout_width="80dp"
+            android:layout_height="90dp"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal">
-
-            <ProgressBar
-                android:id="@+id/progressBar3"
-                style="?attr/actionBarTabBarStyle"
-                android:layout_width="80dp"
-                android:layout_height="90dp"
-                android:layout_gravity="center"
-                android:visibility="visible" />
+            android:visibility="visible" />
 
 
-
-        </LinearLayout>
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/imageView18"
